<resources>
    <string name="app_name">LevkoHomework8</string>
    <string name="create_btn">Create</string>
    <string name="phone_number">Phone number:</string>
    <string name="age">Age:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="gender">Gender:</string>
    <string name="activity_add_person_title">Add new person</string>
    <string name="fields_empty">Please, enter First name and phone number!</string>
    <string name="add_person">Add new person</string>
</resources>
